@@ -41,7 +41,7 @@ public class DoctorController {
 
     /** 每页大小钳制到 [1, MAX_PAGE_SIZE] */
     private static int clampSize(int size) {
-        return Math.max(1, Math.min(size, MAX_PAGE_SIZE));
+        return Math.clamp(size, 1, MAX_PAGE_SIZE);
     }
 
     private final DoctorService doctorService;
